# fpga-slam

./: .gitignore
Docs/: AWS_GPU_BASELINE_RUNBOOK.md  RANGENET_SGSLAM_CONTRACT.md  README.md  RangeNet_breakdown.md  aws_s3_data.md  paper.txt  report.md
RangeNet/train/backbones/: darknet.py
RangeNet/train/tasks/semantic/: export_sgslam_labels.py  quantize_feasibility.py
RangeNet/train/tasks/semantic/modules/: segmentator.py
SG-SLAM/: .gitattributes  .gitignore  BUILDGRAPH_BENCHMARK_DIRECTIONS.txt  DOCKER_NOETIC_COMMANDS.md  Dockerfile  EECS570_Project_Proposal_FPGA_Accelerator_for_Semantic_SLAM.md  README.md  profile_report_plots.py  results.txt
SG-SLAM/cpp/semgraph_slam/: CMakeLists.txt
SG-SLAM/cpp/semgraph_slam/benchmarks/: CMakeLists.txt  benchmark_buildgraph.cpp  benchmark_registration.cpp
SG-SLAM/cpp/semgraph_slam/frontend/: CMakeLists.txt  Registration.cpp  Registration.hpp  SemGraph.cpp
SG-SLAM/cpp/semgraph_slam/hls/: MILESTONE1_NOTES.md  buildgraph_kernel_draft.cpp  registration_kernel_draft.cpp  registration_kernel_draft.hpp
SG-SLAM/cpp/semgraph_slam/loopclosure/: LoopClosure.cpp
SG-SLAM/cpp/semgraph_slam/pipeline/: SemGraphSLAM.cpp
SG-SLAM/profiling/: plot_important_visualizations.py
SG-SLAM/profiling/important_plots/: important_summary.json
SG-SLAM/profiling/report_plots/: summary_stats.json
SG-SLAM/ros/launch/: semgraph_slam_kitti.launch
SG-SLAM/ros/ros1/: semSLAM.cpp
fpga/: AWS_F1_SETUP.md  export_weights.py  generate_golden.py
fpga/api/: README.md  registration_api.py
